# log-surgeon

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml  api.hpp  lint-requirements.txt  lint-tasks.yml  taskfile.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-docs-only.yaml  build-lightweight.yaml  build.yaml  docs.yaml  doxygen.yaml  lint.yaml  lint.yml  pr-title-checks.yaml
cmake/: log_surgeon-config.cmake.in
docs/: design-objectives.md  index.md  parsing-constraints.md  schema.md
docs/doxygen/: Doxyfile  compact-dark.css  footer.html  groups.dox  mainpage.dox  toggleMode.js
examples/: .clang-format  CMakeLists.txt  README.md  buffer-parser.cpp  common.cpp  common.hpp  intersect-test.cpp  reader-parser.cpp  schema.txt
rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  compile_flags.txt  pyproject.toml  rust-toolchain.toml  rustfmt.toml
rust/cpp_ffi/log_mechanic/: generated_bindings.hpp  log_mechanic.hpp  rust_compat.hpp
rust/cpp_ffi/log_surgeon/: generated_bindings.hpp  log_surgeon.hpp  rust_compat.hpp
rust/examples/: Makefile  driver.c
rust/examples/cpp_usage/: Makefile  usage.cpp
rust/examples/python_usage/: extract_logtypes.py  schema.py  usage.py
rust/include/: log_mechanic.compat.hpp  log_mechanic.generated.hpp  log_mechanic.h  log_mechanic.hpp
rust/src/: automata.rs  c_interface.rs  debug.rs  dfa.rs  interval_tree.rs  lexer.rs  lib.rs  log_event.rs  log_type.rs  nfa.rs  parser.rs  python_interface.rs  query.rs  regex.rs  schema.rs
rust/tests/python/: test_simple.py
src/: .clang-format
src/log_surgeon/: Aliases.hpp  Buffer.hpp  BufferParser.cpp  BufferParser.hpp  Constants.hpp  FileReader.cpp  FileReader.hpp  ItemSet.hpp  LALR1Parser.cpp  LALR1Parser.hpp  LALR1Parser.tpp  Lalr1Parser.cpp  Lalr1Parser.hpp  Lalr1Parser.tpp  Lexer.hpp  Lexer.tpp  LexicalRule.hpp  LogEvent.cpp  LogEvent.hpp  LogParser.cpp  LogParser.hpp  LogParserOutputBuffer.cpp  LogParserOutputBuffer.hpp  NonTerminal.cpp  NonTerminal.hpp  Parser.hpp  Parser.tpp  ParserAst.cpp  ParserAst.hpp  ParserInputBuffer.cpp  ParserInputBuffer.hpp  Production.hpp  Reader.hpp  ReaderParser.cpp  ReaderParser.hpp  Schema.cpp  Schema.hpp  SchemaParser.cpp  SchemaParser.hpp  Token.cpp  (+6 more)
src/log_surgeon/finite_automata/: Capture.hpp  DeterminizationConfiguration.hpp  Dfa.cpp  Dfa.hpp  DfaDeterminizationHandler.hpp  DfaState.cpp  DfaState.hpp  DfaStatePair.hpp  DfaStateType.hpp  DfaTransition.cpp  DfaTransition.hpp  Nfa.cpp  Nfa.hpp  NfaSpontaneousTransition.cpp  NfaSpontaneousTransition.hpp  NfaState.cpp  NfaState.hpp  NfaStatePair.hpp  NfaStateType.hpp  PrefixTree.cpp  PrefixTree.hpp  RegexAST.cpp  RegexAST.hpp  RegexAST.tpp  RegexDFA.hpp  RegexDFA.tpp  RegexDFAState.hpp  RegexDFAStatePair.hpp  RegexDFAStateType.hpp  RegexNFA.hpp  RegexNFA.tpp  RegexNFAState.hpp  RegexNFAStateType.hpp  Register.hpp  RegisterAction.hpp  RegisterHandler.hpp  RegisterOperation.cpp  RegisterOperation.hpp  SpontaneousTransition.hpp  StateType.hpp  (+7 more)
src/log_surgeon/query_parser/: QueryInterpretation.cpp  QueryInterpretation.hpp  StaticQueryToken.hpp  VariableQueryToken.cpp  VariableQueryToken.hpp  WildcardExpression.cpp
src/log_surgeon/wildcard_query_parser/: CaptureQueryToken.cpp  CaptureQueryToken.hpp  Expression.cpp  Expression.hpp  ExpressionCharacter.hpp  ExpressionView.cpp  ExpressionView.hpp  Query.cpp  Query.hpp  QueryInterpretation.cpp  QueryInterpretation.hpp  StaticQueryToken.hpp  VariableQueryToken.cpp  VariableQueryToken.hpp  WIldcardCharacter.hpp  WildcardCharacter.hpp  WildcardExpression.cpp  WildcardExpression.hpp  WildcardExpressionView.cpp  WildcardExpressionView.hpp
taskfiles/: build.yaml  deps.yaml  docs.yaml  doxygen.yaml  examples.yaml  install.yaml  lint.yaml  log-surgeon.yaml  test.yaml
tests/: .clang-format  CMakeLists.txt  comparison_test_utils.hpp  test-NFA.cpp  test-buffer-parser.cpp  test-capture.cpp  test-dfa.cpp  test-expression-character.cpp  test-expression-view.cpp  test-expression.cpp  test-lexer.cpp  test-log-parser.cpp  test-nfa.cpp  test-parser.cpp  test-prefix-tree.cpp  test-query-interpretation.cpp  test-query.cpp  test-reader-parser.cpp  test-regex-ast.cpp  test-register-handler.cpp  test-register.cpp  test-schema.cpp  test-static-query-token.cpp  test-tag.cpp  test-variable-query-token.cpp  test-wildcard-character.cpp  test-wildcard-expression-view.cpp  test-wildcard-expression.cpp
tools/: init.sh
tools/deps-install/: install-catch2.sh
tools/deps-install/ubuntu/: install-catch2.sh
