[package]
name = "log-mechanic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [
	"lib",
	"staticlib",
	"cdylib"
]

[features]
default = [
	"python",
]
python = [
	"pyo3/extension-module",
	"pyo3/macros",
]

[build-dependencies]
cbindgen = "0.29"

[dependencies]
nom = "8"
tracing = "0.1"

[dependencies.pyo3]
version = "0.27"
default-features = false
